src/objects/TranscriptMessage__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <description>The content of the SMS</description>
        <label>Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>From_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the message is from the agent or not (the opposite of this would be &quot;From Customer,&quot; for example)</description>
        <label>From Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>TranscriptMessages</relationshipLabel>
        <relationshipName>TranscriptMessages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TimeString__c</fullName>
        <label>TimeString</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TranscriptMessage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TranscriptMessage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TranscriptMessages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>